Chaos Monkey 사용법
http 메소드 혹은 포스트맨으로 요청을 해볼 수 있다. 요청방법은 /chaosmonkey/assualts의 엔드포인트로 옵션을 추가하여 진행하면 된다.

--- a/src/test/resources/applictation-test.properties
+++ b/src/test/resources/applictation-test.properties
@@ -1,2 +1,5 @@
 spring.datasource.url=jdbc:tc:postgresql://localhost:15432/studytest
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+management.endpoints.chaosmonkey.enabled=true
+management.endpoints.web.exposure.include=health,info,chaosmonkey     # ??? ?? ?????? ???? ?? ???? ??. 
+chaos.monkey.watcher.repository=true
