Chaos Monkey Latency 설정
레이턴시 및 각종 오류 상황을 설정해서 오류를 검증해볼 수 있다.

--- a/src/test/resources/applictation-test.properties
+++ b/src/test/resources/applictation-test.properties
@@ -2,4 +2,9 @@ spring.datasource.url=jdbc:tc:postgresql://localhost:15432/studytest
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 management.endpoints.chaosmonkey.enabled=true
 management.endpoints.web.exposure.include=health,info,chaosmonkey     # ??? ?? ?????? ???? ?? ???? ??. 
+
+
 chaos.monkey.watcher.repository=true
+chaos.monkey.assaults.latency-active = false      # ????? ??? ? ??.
+chaos.monkey.enabled=true #  ?????? ??? ? ???? ??? ?? ??
+
